[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "hate-classification"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.57.3",
    "torch==2.9.1",
]

[project.scripts]
hate-classification = "ml.hate_classification.core:run"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ml/extractor" = "ml/extractor"
"../../bases/ml/hate_classification" = "ml/hate_classification"
"../../components/classifier" = "ml/classifier"
"../../components/ml/json" = "ml/json"

