[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "hate-llm-labeling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "pydantic-settings==2.12.0",
]

[project.scripts]
hate-llm-labeling = "ml.hate_llm_labeling.core:run"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/ml/extractor" = "ml/extractor"
"../../bases/ml/hate_llm_labeling" = "ml/hate_llm_labeling"
"../../components/llm_labeler" = "ml/llm_labeler"
"../../components/ml/config" = "ml/config"
"../../components/ml/hf" = "ml/hf"
"../../components/ml/json" = "ml/json"
