[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "ml-leaderboard-api"
version = "0.1.0"
description = "A Python Polylith project template"
authors = [{name = "aug6th", email = "joeun2ce@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.polylith.bricks]
"../../bases/ml/leaderboard_api" = "ml/leaderboard_api"
"../../components/ml/leaderboard" = "ml/leaderboard"
"../../components/ml/log" = "ml/log"
"../../components/ml/schema" = "ml/schema"
"../../components/ml/config" = "ml/config"
"../../components/ml/auth" = "ml/auth"
"../../components/ml/middleware" = "ml/middleware"
